--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,15 +1,13 @@
-name: photon ✴ Font Fira
+name: PHOTON font Fira
 version: 0.1.0
-description: fira font
-icon: asterisk
+description: resources for the Fira font collection
 author:
   name: phiarchitect
-  email: phi@photon-platofrm.net
-homepage: https://github.com/phiarchitect/grav-plugin-photon-font-fira
-demo: https://illumiphi.com
-keywords: datatype, photon
-bugs: https://github.com/phiarchitect/grav-plugin-photon-font-fira/issues
-docs: https://github.com/phiarchitect/grav-plugin-photon-font-fira/blob/develop/README.md
+  email: github@photon-platform.net
+homepage: https://github.com/photon-platform/grav-plugin-photon-font-fira
+keywords: font 
+bugs: https://github.com/photon-platform/grav-plugin-photon-font-fira/issues
+docs: https://github.com/photon-platform/grav-plugin-photon-font-fira/blob/develop/README.md
 license: MIT
 
 dependencies:
@@ -30,30 +28,3 @@ form:
       validate:
         type: bool
 
-    built_in_css:
-      type: toggle
-      label: PLUGIN_PHOTON.USE_BUILTIN_CSS
-      highlight: 1
-      default: 1
-      options:
-        1: PLUGIN_ADMIN.ENABLED
-        0: PLUGIN_ADMIN.DISABLED
-      validate:
-        type: bool
-
-    built_in_js:
-      type: toggle
-      label: PLUGIN_PHOTON.USE_BUILTIN_JS
-      highlight: 1
-      default: 1
-      options:
-        1: PLUGIN_ADMIN.ENABLED
-        0: PLUGIN_ADMIN.DISABLED
-      validate:
-        type: bool
-
-
-    # text_var:
-    #   type: text
-    #   label: PLUGIN_FONT_FIRA.TEXT_VARIABLE
-    #   help: PLUGIN_FONT_FIRA.TEXT_VARIABLE_HELP
